--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 }
 .logo {
     height: 120px;
-    background: url(/img/logo.png) no-repeat center;
+    background: url(./img/logo.png) no-repeat center; 
+    
     margin-bottom: 6px;
 }
 
@@ -20,6 +21,7 @@ body {
     margin: 0;
     color: rgb(106, 106, 106);
 }
+
 
 section {
     max-width: 1100px;
