--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -24,7 +25,7 @@ body {
 
 
 section {
-    max-width: 1100px;
+    max-width: 798px;
     width: 90%;
     padding: 0 40px;
     margin: auto;
