--- a/style.css
+++ b/style.css
@@ -10,19 +10,17 @@ body {
 }
 .logo {
     height: 120px;
-    background: url(./img/logo.png) no-repeat center; 
-    
+    background: url(./img/logo.png) no-repeat center;  
     margin-bottom: 6px;
 }
 
-.info {
+.logo-address {
     font-size: 12px;
     font-weight:100;
     text-align: center;
     margin: 0;
     color: rgb(106, 106, 106);
 }
-
 
 section {
     max-width: 798px;
@@ -32,7 +30,7 @@ section {
 }
 
 .address {
-    margin-bottom: 40px;
+    margin-bottom: 55px;
 }
 
 .title {
@@ -49,6 +47,7 @@ section {
 .invoice {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 80px;
 }
 
 .bill-title {
@@ -84,7 +83,7 @@ td, th {
 }
 .invoice-table td {
     width: 250px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: bold;
     text-align: right;
 
@@ -94,16 +93,12 @@ td, th {
     width: 150px;
 }
 
-.invoice-info {
-    margin-bottom: 60px;
-}
-
 .discription-table {
     width: 100%;
 }
 
 .discription {
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 .discription-table th:first-of-type {
     text-align-last: left;
@@ -116,19 +111,26 @@ td, th {
 
 .bank {
     display: flex;
-    
-    margin-bottom: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
 
 }
  .bank-details {
-     width: 25%;
-     font-size: 12px;
-     margin-right: 15%;
+     width: 21%;
+     font-size: 11px;
+     margin-right: 11%;
+     margin-bottom: 25px;
  }
 
  .detalis {
      margin: 0;
      border-bottom: 1px solid;
+ }
+
+ .bold {
+     margin: 0;
+     font-size: 11px;
+     font-weight: bold;
  }
 
 
