--- a/style.css
+++ b/style.css
@@ -133,6 +133,55 @@ td, th {
      font-weight: bold;
  }
 
+.footer-line {
+    overflow: hidden;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(255, 115, 0);
+}
+
+.footer-title {
+    display: block;
+    
+}
+
+.footer-title::before,
+.footer-title::after   {
+    content: "";
+    display: inline-block;
+    vertical-align:middle;
+    width: 100%;
+    height: 10px;
+    background-color: rgb(255, 115, 0);
+    position: relative;
+
+}
+
+.footer-title::before {
+    margin-left: -100%;
+    left: -10px;
+}
+
+.footer-title::after {
+    margin-right: -100%;
+    right: -10px;
+
+}
+
+.footer-address  {
+    font-size: 12px;
+    text-align: center;
+    color: rgb(106, 106, 106);
+    padding: 20px;
+    
+}
+
+.footer-address p{
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
 
 
 
